[project]
name = "cwaf-external-mcp"
version = "1.0.14"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eilon.shai", email = "eilon.shai@imperva.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "pydantic<2.12,>=2.0",
    "ddtrace>=3.10.1,<4.0",
    "debugpy>=1.8.14",
    "fastapi>=0.115.14",
    "fastmcp==2.10.6",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "prometheus-client>=0.22.1",
    "pytest>=8.4.1",
    "pytest-httpserver>=1.1.3",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.4",
    "respx>=0.22.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
cwaf-external-mcp = "cwaf_external_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src", "component"]
include = ["environment*","cwaf_external_mcp*"]

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "black>=25.12.0",
    "isort>=6.0.1",
    "jwcrypto>=1.5.6",
    "pre-commit>=4.5.1",
    "pyjwt>=2.10.1",
    "pylint>=3.3.7",
    "python-minifier>=3.1.1",
    "ruff>=0.14.10",
]

test = [
    "docker>=7.1.0",
    "testcontainers>=4.14.0",
    "wiremock>=2.7.0",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.7.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.pylint."MASTER"]
ignore = ["tests"]

[tool.coverage.run]
omit = [
    "*/.tests/*"
    ]

